--- a/public/index.html
+++ b/public/index.html
@@ -6,19 +6,21 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Kasbass is plumbing company provides variety of services
+      content="Noel's is plumbing company provides variety of services
       ranging from Faucet Repair and Installation, Toilet Repair and Installation,
       Gas water heater Installation, Drain Cleaning, Bathroom Repair, water Line Repair.
       We are trusted and reliable plumbing company."
     />
-    <link href="/dist/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-    <title>Kasbass Enterprises Nigeria Limited</title>
+    <link href="/dist/output.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <title>Noel's Plumbing</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
   </body>
 </html>
